--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,7 @@
     margin: 0;
     border: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 :root{
@@ -18,19 +19,22 @@
     
     --font-syne: "Syne", serif;
     --font-mont: "Montserrat", serif;;
-    --h1-desk: 800 4rem/125% var(--font-syne);
-    --h2-desk: 800 2.5rem/120% var(--font-syne);
+    --h1-desk: 700 4rem/125% var(--font-syne);
+    --h2-desk: 700 2.5rem/120% var(--font-syne);
     --button-label-desk: 500 1rem/150% var(--font-mont);
     --span-desk: 0.875rem/150% var(--font-mont);
 
-    --h1-mobile: 800 2rem/125% var(--font-syne);
-    --h2-mobile: 800 2rem/120% var(--font-syne);
+    --h1-mobile: 700 2rem/125% var(--font-syne);
+    --h2-mobile: 700 2rem/120% var(--font-syne);
 }
 
 body{
     color: var(--text);
     background-color: var(--background);
-    text-decoration: none;
+}
+
+a{
+    color: inherit;
 }
 
 h1{
